--- a/src/FilteringSample/packages.config
+++ b/src/FilteringSample/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.CrmSdk.Extensions" version="7.1.0" targetFramework="net452" />
   <package id="Microsoft.IdentityModel" version="6.1.7600.16394" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="YamlDotNet" version="3.7.0" targetFramework="net452" />
 </packages>
